--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </style><link rel="stylesheet" href="styles-Q5MPBZDG.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-Q5MPBZDG.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-RKVCDDHL.js" type="module"></script></body>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-FXYKPMYB.js" type="module"></script></body>
 </html>
